--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             <option>10 - Excelente</option>
             <option>9</option>
             <option>8</option>
-	    <option>7</option>
-	    <option>6</option>
-	    <option>5</option>
-	    <option>4</option>
-	    <option>3</option>
-	    <option>2</option>
+	        <option>7</option>
+	        <option>6</option>
+	        <option>5</option>
+	        <option>4</option>
+	        <option>3</option>
+	        <option>2</option>
             <option>1- Muy malo</option>
         </select>
 
@@ -79,7 +79,7 @@
             <option>Bueno</option>
             <option>Regular</option>
             <option>Malo</option>
-	    <option>Muy Malo</option>
+	        <option>Muy Malo</option>
         </select>
 
         <label>¿Calidad del regalo?</label>
@@ -89,7 +89,7 @@
             <option>Bueno</option>
             <option>Regular</option>
             <option>Malo</option>
-	    <option>Muy Malo</option>
+	        <option>Muy Malo</option>
         </select>
 
         <label>¿Contenido del mensaje?</label>
@@ -99,7 +99,14 @@
             <option>Bueno</option>
             <option>Regular</option>
             <option>Malo</option>
-	    <option>Muy Malo</option>
+	        <option>Muy Malo</option>
+        </select>
+
+        <label>¿Volvería a utilizar los servicios de Kevin?</label>
+        <select id="rating3" required>
+            <option value="">Seleccione...</option>
+            <option>Sí</option>
+            <option>No</option>
         </select>
 
         <label>¿Algún comentario de mejora?</label>
@@ -133,3 +140,4 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
 
 </body>
 </html>
+
