--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encuesta de Satisfacción de Servicio</title>
+    <title>Encuesta de satisfacción de servicio de regalo de cumpleaños</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
 
     <form id="surveyForm">
 
-        <label>¿Recomdaría este serivicio de Kevin a algún familiar o amigo?</label>
+        <label>¿Recomdaría este servicio de Kevin a algún familiar o amigo?</label>
         <select id="rating1" required>
             <option value="">Seleccione...</option>
             <option>10 - Excelente</option>
@@ -72,7 +72,7 @@
             <option>1- Muy malo</option>
         </select>
 
-        <label>¿Qué tan satisfecho está con nuestro servicio?</label>
+        <label>¿Qué tan satisfecho está con el servicio?</label>
         <select id="rating2" required>
             <option value="">Seleccione...</option>
             <option>Excelente</option>
@@ -140,4 +140,5 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
 
 </body>
 </html>
+
 
