--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
     console.log("Datos enviados:");
     console.log(data);
 
-    alert("¡Gracias por completar la encuesta!");
+    alert("¡FGracias por completar la encuesta!");
 
     // Aquí puedes enviar los datos a un servidor:
     // fetch('/guardar', { method: 'POST', body: JSON.stringify(data) })
@@ -140,5 +140,6 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
 
 </body>
 </html>
+
 
 
