--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
 
 <div class="container">
-    <h2>Encuesta de Servicio</h2>
+    <h2>Encuesta de satisfacción de servicio de regalo de cumpleaños</h2>
 
     <form id="surveyForm">
 
@@ -140,6 +140,7 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
 
 </body>
 </html>
+
 
 
 
