--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </select>
 
         <label>¿Contenido del mensaje?</label>
-        <select id="rating3" required>
+        <select id="rating4" required>
             <option value="">Seleccione...</option>
             <option>Excelente</option>
             <option>Bueno</option>
@@ -103,7 +103,7 @@
         </select>
 
         <label>¿Volvería a utilizar los servicios de Kevin?</label>
-        <select id="rating3" required>
+        <select id="rating5" required>
             <option value="">Seleccione...</option>
             <option>Sí</option>
             <option>No</option>
@@ -121,18 +121,22 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
     event.preventDefault();
 
     let data = {
-        calificacion: document.getElementById("rating1").value,
-        calificacion: document.getElementById("rating2").value,
-        comentarios: document.getElementById("comments").value
+        NPS: document.getElementById("rating1").value,
+        CSAT: document.getElementById("rating2").value,
+        Calidad: document.getElementById("rating3").value,
+        Contenido: document.getElementById("rating4").value,
+        Servicio: document.getElementById("rating5").value,
+        Comentario: document.getElementById("comments").value
     };
 
-    console.log("Datos enviados:");
-    console.log(data);
+    fetch("https://script.google.com/macros/s/AKfycbyUkxJEblN83UB6wrhUfZEejrpvM3iUUm8F-SAZa-Z7XlCWM_OfEHha-1wGVowt0iLNUA/exec", {
+        method: "POST",
+        mode: "no-cors",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(data)
+    });
 
     alert("¡Gracias por completar la encuesta!");
-
-    // Aquí puedes enviar los datos a un servidor:
-    // fetch('/guardar', { method: 'POST', body: JSON.stringify(data) })
 
     document.getElementById("surveyForm").reset();
 });
