--- a/index.html
+++ b/index.html
@@ -120,18 +120,27 @@
 document.getElementById("surveyForm").addEventListener("submit", function(event) {
     event.preventDefault();
 
-    const formData = new FormData();
+    // Recopila los datos como un objeto
+    const data = {
+        NPS: document.getElementById("rating1").value,
+        CSAT: document.getElementById("rating2").value,
+        Calidad: document.getElementById("rating3").value,
+        Contenido: document.getElementById("rating4").value,
+        Servicio: document.getElementById("rating5").value,
+        Comentario: document.getElementById("comments").value
+    };
 
-    formData.append("NPS", document.getElementById("rating1").value);
-    formData.append("CSAT", document.getElementById("rating2").value);
-    formData.append("Calidad", document.getElementById("rating3").value);
-    formData.append("Contenido", document.getElementById("rating4").value);
-    formData.append("Servicio", document.getElementById("rating5").value);
-    formData.append("Comentario", document.getElementById("comments").value);
+    // Convierte a formato x-www-form-urlencoded
+    const formBody = Object.keys(data).map(key => 
+        encodeURIComponent(key) + '=' + encodeURIComponent(data[key])
+    ).join('&');
 
     fetch("https://script.google.com/macros/s/AKfycbwLceag53zmQJIAcQfLs4axD3uyO1qZ6uhV5bTlo-4csWQ9E04W27PlXeaEzK1QZ7zJlg/exec", {
         method: "POST",
-        body: formData
+        headers: {
+            "Content-Type": "application/x-www-form-urlencoded;charset=UTF-8"
+        },
+        body: formBody
     })
     .then(response => response.json())
     .then(data => {
@@ -144,10 +153,12 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
         alert("Hubo un error al enviar la encuesta. Intenta nuevamente.");
     });
 });
+
 </script>
 
 </body>
 </html>
+
 
 
 
