--- a/index.html
+++ b/index.html
@@ -135,11 +135,20 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
         encodeURIComponent(key) + '=' + encodeURIComponent(data[key])
     ).join('&');
 
-    fetch("https://script.google.com/macros/s/AKfycbwLceag53zmQJIAcQfLs4axD3uyO1qZ6uhV5bTlo-4csWQ9E04W27PlXeaEzK1QZ7zJlg/exec", {
-        method: "POST",
-        headers: {
-            "Content-Type": "application/x-www-form-urlencoded;charset=UTF-8"
-        },
+fetch("https://script.google.com/macros/s/AKfycbwLceag53zmQJIAcQfLs4axD3uyO1qZ6uhV5bTlo-4csWQ9E04W27PlXeaEzK1QZ7zJlg/exec", {
+    method: "POST",
+    mode: "no-cors",
+    body: formBody
+})
+.then(() => {
+    alert("¡Gracias por completar la encuesta!");
+    document.getElementById("surveyForm").reset();
+})
+.catch(error => {
+    console.error("Error al enviar la encuesta:", error);
+    alert("Hubo un error al enviar la encuesta. Intenta nuevamente.");
+});
+
         body: formBody
     })
     .then(response => response.json())
@@ -158,6 +167,7 @@ document.getElementById("surveyForm").addEventListener("submit", function(event)
 
 </body>
 </html>
+
 
 
 
